--- a/certimax-wallet/src/index.html
+++ b/certimax-wallet/src/index.html
@@ -1,13 +1,45 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>CertimaxWallet</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <!--Import Google Icon Font-->
+    <link href="assets/css/material_icons.css" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="assets/css/materialize.min.css"  media="screen,projection"/>
+    <link href="assets/fonts/fontawesome/css/fontawesome.css" rel="stylesheet">
+    <script src="assets/js/jquery.js"></script>
+    <script src="assets/js/materialize-select.js"></script>
+    <script src="assets/js/jquery.blockUI.js"></script>
+    <title>CertimaxWallet</title>
+  </head>
+
+  <body>
+    <header>
+      <nav>
+        <div class="nav-wrapper col l12 m12  s12  indigo darken-2">
+          <a href="#" class="brand-logo left regular-text">Wallet</a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <!--li><a href="/trial1">abreme</a></li-->
+            <li><a href="/">Inicio</a></li>
+          </ul>
+        </div>
+
+        <!-- Dropdown Structure-->
+        <!--<ul id="dropdown1" class="dropdown-content">
+          <li><a href="#!" class="red-text">Editar cuenta</a></li>
+          <li class="divider"></li>
+          <li><a href="http://localhost:8000/auth/logout" class="red-text">Cerrar sesi&oacuten</a></li>
+        </ul>-->
+       </nav>
+    </header>
+    <app-root></app-root>
+  </body> <br>
+  <footer class="page-footer #d32f2f red darken-2">
+    <div class="footer-copyright">
+      <div>
+        <a class="grey-text text-lighten-4" href="#!">&nbsp;&nbsp;&nbsp;&nbsp;© 2020 CertiMax</a>
+      </div>
+    </div>
+  </footer>
 </html>
